--- a/billing/templates/billing/invoice_detail.html
+++ b/billing/templates/billing/invoice_detail.html
@@ -89,6 +89,7 @@
                             <p>{% trans "Due date" %}: {{ invoice.due_date|date:"Y, M d" }}</p>
                         </div>
                     </div>
+                    {% if customer_config or invoice.member %}
                     <div class="detail col-sm-4">
                         <h4>{% trans "Invoiced To" %}</h4>
                         <div>
@@ -108,6 +109,7 @@
                             {% endif %}
                         </div>
                     </div>
+                    {% endif %}
                     <div class="detail col-sm-4">
                         <h4>{% trans "Pay To" %}</h4>
                         <div>
