--- a/partnership/templates/partnership/application_list.html
+++ b/partnership/templates/partnership/application_list.html
@@ -1,5 +1,5 @@
 {% extends 'core/app_base_admin.html' %}
-{% load i18n humanize staticfiles auth_tokens %}
+{% load i18n humanize static auth_tokens %}
 
 {% block page_title %}
 <title>{% trans "Applications" %} - {{ service.project_name }}</title>
