--- a/partnership/templates/partnership/cloud_setup/settings.html
+++ b/partnership/templates/partnership/cloud_setup/settings.html
@@ -50,6 +50,8 @@ INSTALLED_APPS = (
     'ikwen.flatpages',
     'ikwen.partnership',
     'ikwen.theming',
+    'ikwen.rewarding',
+    'ikwen.revival',
 
     'ikwen_kakocase.kakocase',
     'ikwen_kakocase.kako',
@@ -61,6 +63,9 @@ INSTALLED_APPS = (
     'ikwen_webnode.web',
     'ikwen_webnode.items',
     'ikwen_webnode.blog',
+
+    'echo',
+    'daraja',
 )
 
 MIDDLEWARE_CLASSES = (
@@ -72,6 +77,7 @@ MIDDLEWARE_CLASSES = (
     'django.middleware.clickjacking.XFrameOptionsMiddleware',
     'django_user_agents.middleware.UserAgentMiddleware',
     'ikwen.core.middleware.ServiceStatusCheckMiddleware',
+    'ikwen.core.middleware.HideError403Middleware',
     'ikwen.billing.middleware.CurrenciesRatesMiddleware',
 )
 
@@ -106,7 +112,8 @@ else:
         'ENGINE': 'django.db.backends.mysql',
         'NAME': '',
         'USER': '',
-        'PASSWORD': 'admin'
+        'PASSWORD': 'admin',
+        'CONN_MAX_AGE': 600
     }
 
 # Database
@@ -116,13 +123,17 @@ DATABASES = {
     'default': {
         'ENGINE': '', # Add 'postgresql_psycopg2', 'mysql', 'sqlite3' or 'oracle'.
         'NAME': '{{ ikwen_name }}',
+        'CONN_MAX_AGE': 900
     },
     'umbrella': {
         'ENGINE': '', # Add 'postgresql_psycopg2', 'mysql', 'sqlite3' or 'oracle'.
         'NAME': '',
+        'CONN_MAX_AGE': 900,
     },
     'wallets': WALLETS_DB
 }
+
+SESSION_ENGINE = 'django.contrib.sessions.backends.cached_db'
 
 # Internationalization
 # https://docs.djangoproject.com/en/1.6/topics/i18n/
@@ -150,13 +161,13 @@ MEDIA_URL = '{{ media_url }}'
 # Don't put anything in this directory yourself; store your static files
 # in apps' "static/" subdirectories and in STATICFILES_DIRS.
 # Example: "/var/www/example.com/static/"
-STATIC_ROOT = '{{ static_root }}'
+STATIC_ROOT = '/home/ikwen/static/'
 
 
 # Static files (CSS, JavaScript, Images)
 # https://docs.djangoproject.com/en/1.6/howto/static-files/
 
-STATIC_URL = '{{ static_url }}'
+STATIC_URL = 'https://static.ikwen.com/'
 
 TEMPLATE_DIRS = (
     os.path.join(BASE_DIR,  'templates'),
@@ -169,7 +180,7 @@ CACHES = {
     'default': {
         'BACKEND': 'django.core.cache.backends.memcached.MemcachedCache',
         'LOCATION': '127.0.0.1:11211',
-        'TIMEOUT': 60 * 2,
+        'TIMEOUT': 60 * 5,
         'KEY_PREFIX': '{{ ikwen_name }}',  # Use rather svdprod for Production
         'VERSION': '1'
     }
@@ -224,7 +235,7 @@ STAFF_ROUTER = (
 
 IKWEN_BASE_URL = 'http://www.ikwen.com'  # Used only for dev purposes (DEBUG = False)
 
-WSGI_SCRIPT_ALIAS = ''  # Used only for dev purposes (DEBUG = False)
+WSGI_SCRIPT_ALIAS = '/{{ ikwen_name }}'
 
 
 #  *******       BILLING CONFIGURATION       *******  #
