1 - New managed attribute ikwen.billing.Payment.transaction 2 - Invoice payment supports multiple instalments if Invoice.amount > 500,000 3 - Wallet name clearly stated in the column Payment method of Invoice payment. 4 - Some code improvements

--- a/accesscontrol/templates/accesscontrol/sign_in_minimal.html
+++ b/accesscontrol/templates/accesscontrol/sign_in_minimal.html
@@ -319,6 +319,7 @@
                             $('#content').removeClass('init');
                             $('#password').focus();
                             if (username.isValidEmail()) {
+                                {% url 'ikwen:forgotten_password' as forgotten_password_url %}
                                 $('.forgotten-pwd').prop('href', '{{ forgotten_password_url|ikwenize }}' + '?' + 'username=' + username);
                             }
                         } else {
