--- a/billing/templates/billing/invoice.rml.html
+++ b/billing/templates/billing/invoice.rml.html
@@ -239,9 +239,13 @@
                     </para>
                 </td>
                 <td>
-                    <para>
-                        {{ payment.method }}
-                    </para>
+                    <para>{% with tx=payment.transaction %}
+                        {% if tx %}
+                            {{ tx.wallet_name }}
+                        {% else %}
+                            {{ payment.method }}
+                        {% endif %}
+                    {% endwith %}</para>
                 </td>
                 <td>
                     <para>
